# boston-energy

./: .gitignore  README.md  docker-compose.yml  interview_question.md
.github/workflows/: deploy-frontend.yml
backend/: .env.example  Dockerfile  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 148d21faa559_init.py  6b991877b6f3_init.py
backend/app/: main.py
backend/app/core/: config.py  cors.py  security.py
backend/app/db/: session.py
backend/app/models/: contract.py  portfolio.py
backend/app/routers/: auth.py  contracts.py  portfolio.py
backend/app/schemas/: contract.py  portfolio.py
backend/app/services/: contracts_service.py
backend/energy_marketplace_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_contracts_crud.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  render.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  client.ts  contracts.ts  portfolio.ts
frontend/src/contexts/: ColorModeContext.tsx  NotificationContext.tsx
frontend/src/pages/: ContractDetailsPage.tsx  ContractsPage.tsx  HomePage.tsx  LoginPage.tsx  PortfolioPage.tsx
